added 3d-memory-pummel button to 3d-dashboard

--- a/3d-test-dashboard/index.html
+++ b/3d-test-dashboard/index.html
@@ -9,6 +9,7 @@
 <body>
 
   <div id="plot-list"></div>
+  <div id="status-info" style="display: block; position: absolute; top: 150px;"></div>
   <div id="embedded-graph"></div>
   <div id="embedded-image"style="
     display: block;
