make Tabs.fresh return plotDiv

--- a/3d-test-dashboard/index.html
+++ b/3d-test-dashboard/index.html
@@ -52,6 +52,7 @@
             anchor.removeChild(plotDiv);
             plotDiv = document.createElement('div');
             anchor.appendChild(plotDiv);
+            return plotDiv;
         }
     };
 
