add PLOTLYENV.TOPOJSON_URL to context_processor:
- use it in getTopojsonPath
- override it in test-dashboard index

--- a/test-dashboard/index.html
+++ b/test-dashboard/index.html
@@ -23,7 +23,9 @@
   <script type="text/javascript" src="./../shelly/shelly/static/js/plugins/mathjax/MathJax.js?config=TeX-AMS-MML_SVG"></script>
 
   <script>
-    PLOTLYENV = {}
+    PLOTLYENV = {
+        TOPOJSON_URL: '../shelly/plotlyjs/static/plotlyjs/src/geo/topojson/'
+    };
   </script>
 
   <script type="text/javascript" src="./../shelly/plotlyjs/static/plotlyjs/build/plotlyjs-bundle.js"></script>
