make plot list in test dashboard scrollable so that we don't run out of buttons

--- a/test-dashboard/index.html
+++ b/test-dashboard/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-  <div id="plot-list"></div>
+  <div id="plot-list" style="overflow:auto; height: 100px;"></div>
   <div id="status-info" style="display: block; position: absolute; top: 150px;"></div>
   <div id="embedded-graph"></div>
   <div id="embedded-image"style="
