Updates to toolpanel-test-dashboard

--- a/test-dashboard/toolpanel-dashboard/index.html
+++ b/test-dashboard/toolpanel-dashboard/index.html
@@ -8,13 +8,15 @@
     <link type="text/css" rel="stylesheet" href="./../../shelly/shelly/static/css/bootstrap-select.min.css" />
 
     <!-- ToolPanel Required Plotly CSS -->
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="workspace-style.css"/>
     <link rel="stylesheet" type="text/css" href="./../../shelly/shelly/static/css/plotly.css"/>
     <link rel="stylesheet" type="text/css" href="./../../shelly/shelly/static/plotlycss/fonts/unified/icons.css" />
 
 </head>
 
 <body>
+
+    <div id="main"></div>
 
     <!-- Dashboard Mock Stuff -->
     <script type"text/javascript" src="mocks.js"></script>
