add chartset="utf-8" to each <script src=plotlyjs-bundle>,   as the d3 code has a bunch of unicode symbols!

--- a/test-dashboard/index.html
+++ b/test-dashboard/index.html
@@ -27,7 +27,7 @@
     };
   </script>
 
-  <script type="text/javascript" src="./../shelly/plotlyjs/static/plotlyjs/build/plotlyjs-bundle.js"></script>
+  <script type="text/javascript" src="./../shelly/plotlyjs/static/plotlyjs/build/plotlyjs-bundle.js" charset="utf-8"></script>
 
   <script type="text/javascript" src="test-bundle.js"></script>
 
