include tipsy tooltips deep for toolpanel-dashboard

--- a/test-dashboard/toolpanel-dashboard/index.html
+++ b/test-dashboard/toolpanel-dashboard/index.html
@@ -28,6 +28,7 @@
 
     <!-- ToolPanel Required Plugins' JS -->
     <script type="text/javascript" src="./../../shelly/shelly/static/js/plugins/jquery-ui-1.8.23.custom.min.js"></script>
+    <script type="text/javascript" src="./../../shelly/shelly/static/js/plugins/jquery.tipsy.js"></script>
     <script type="text/javascript" src="./../../shelly/shelly/static/js/plugins/spectrum.js"></script>
     <script type="text/javascript" src="./../../shelly/shelly/static/js/plugins/bootstrap.min.js"></script>
     <script type="text/javascript" src="./../../shelly/shelly/static/js/plugins/bootstrap-select.min.js"></script>
