--- a/test-dashboard/toolpanel-dashboard/index.html
+++ b/test-dashboard/toolpanel-dashboard/index.html
@@ -6,6 +6,7 @@
     <link type="text/css" rel="stylesheet" href="./../../shelly/shelly/static/css/jquery-ui.css"/>
     <link type="text/css" rel="stylesheet" href="./../../shelly/shelly/static/css/spectrum.css"/>
     <link type="text/css" rel="stylesheet" href="./../../shelly/shelly/static/css/bootstrap-select.min.css" />
+    <link type="text/css" rel="stylesheet" href="./../../shelly/shelly/static/css/tipsy.css" />
 
     <!-- ToolPanel Required Plotly CSS -->
     <link rel="stylesheet" type="text/css" href="workspace-style.css"/>
