import old workspace style with new tool panel css to dashboard index

--- a/test-dashboard/toolpanel-dashboard/index.html
+++ b/test-dashboard/toolpanel-dashboard/index.html
@@ -10,7 +10,7 @@
 
     <!-- ToolPanel Required Plotly CSS -->
     <link rel="stylesheet" type="text/css" href="./../../shelly/shelly/static/css/plotly.css"/>
-    <link rel="stylesheet" type="text/css" href="./../../shelly/shelly/static/plotlycss/style.css">
+    <link rel="stylesheet" type="text/css" href="old-style.css">
     <link rel="stylesheet" type="text/css" href="./../../shelly/shelly/static/plotlycss/fonts/unified/icons.css" />
 
 </head>
