Consolidate Styles into tool panel sass sheet.

--- a/test-dashboard/toolpanel-dashboard/index.html
+++ b/test-dashboard/toolpanel-dashboard/index.html
@@ -2,16 +2,9 @@
 <html>
 <head>
 
-    <!-- ToolPanel Required Plugins' CSS -->
-    <link type="text/css" rel="stylesheet" href="./../../shelly/shelly/static/css/jquery-ui.css"/>
-    <link type="text/css" rel="stylesheet" href="./../../shelly/shelly/static/css/spectrum.css"/>
-    <link type="text/css" rel="stylesheet" href="./../../shelly/shelly/static/css/bootstrap-select.min.css" />
-    <link type="text/css" rel="stylesheet" href="./../../shelly/shelly/static/css/tipsy.css" />
+    <!-- ToolPanel CSS -->
+    <link rel="stylesheet" type="text/css" href="./../../shelly/toolpanel/static/toolpanel/src/css/style.css"/>
 
-    <!-- ToolPanel Required Plotly CSS -->
-    <link rel="stylesheet" type="text/css" href="./../../shelly/shelly/static/css/plotly.css"/>
-    <link rel="stylesheet" type="text/css" href="old-style.css">
-    <link rel="stylesheet" type="text/css" href="./../../shelly/shelly/static/plotlycss/fonts/unified/icons.css" />
 
 </head>
 
