Syntax error in `index.html` of tool panel dashboard

--- a/test-dashboard/toolpanel-dashboard/index.html
+++ b/test-dashboard/toolpanel-dashboard/index.html
@@ -30,7 +30,7 @@
 
 
     <!-- UI Stuff -->
-    <script type"text/javascript" src="ui.js"></script>
+    <script type="text/javascript" src="ui.js"></script>
 
 </body>
 
