--- a/test-dashboard/toolpanel-dashboard/index.html
+++ b/test-dashboard/toolpanel-dashboard/index.html
@@ -14,6 +14,9 @@
     <!-- PlotlyJS Requirements -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
+    <!-- ToolPanel JS dependencies Bundle -->
+    <script type="text/javascript" src="./../../shelly/toolpanel/static/toolpanel/dist/toolpanel-dependencies-bundle.js"></script>
+
     <!-- ToolPanel Standalone JS Bundle -->
     <script type="text/javascript" src="./../../shelly/toolpanel/static/toolpanel/dist/toolpanel-standalone-bundle.js"></script>
 
