--- a/devtools/image_viewer/index.html
+++ b/devtools/image_viewer/index.html
@@ -6,7 +6,6 @@
     <div id="plot-images"></div>
     <div id="plot-mock"></div>
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
-    <script type="text/javascript" src="test-images-viewer-bundle.js"></script>
+    <script type="text/javascript" src="../../build/image_viewer-bundle.js"></script>
 </body>
 </html>
