use local topojson from dist/ in test dahsboard

--- a/devtools/test_dashboard/index.html
+++ b/devtools/test_dashboard/index.html
@@ -12,11 +12,13 @@
     <script type="text/javascript" src="../../dist/extras/mathjax/MathJax.js?config=TeX-AMS-MML_SVG"></script>
 
     <script type="text/javascript" src="../../dist/plotly.js" charset="utf-8"></script>
-    <script>PLOTLYENV = { TOPOJSON_URL: '../../src/assets/topojson/' };</script>
+
+    <!-- use local topojson files -->
+    <script>Plotly.setPlotConfig({ topojsonURL: '../../dist/topojson/' });</script>
 
     <script type="text/javascript" src="../../build/test_dashboard-bundle.js"></script>
 
-    <!-- helper functions to manipulate graph div -->
+    <!-- helper functions to manipulate the graph div -->
     <script>
     var Tabs = {
         getGraph: function() {
