make watchified bundle step output plotly.js in build/:
- so that temporary dev build are ignored by git.
- `npm run build` is reserved for dist/ builds, while
  `npm run watch` and `npm run start-test_dashboard`
  use the build/ plotly.js

--- a/devtools/test_dashboard/index.html
+++ b/devtools/test_dashboard/index.html
@@ -11,7 +11,8 @@
 
     <script type="text/javascript" src="../../dist/extras/mathjax/MathJax.js?config=TeX-AMS-MML_SVG"></script>
 
-    <script type="text/javascript" src="../../dist/plotly.js" charset="utf-8"></script>
+    <!-- use dev plotly.js build -->
+    <script type="text/javascript" src="../../build/plotly.js" charset="utf-8"></script>
 
     <!-- use local topojson files -->
     <script>Plotly.setPlotConfig({ topojsonURL: '../../dist/topojson/' });</script>
