add scroll-bar to image viewer buttons

--- a/devtools/image_viewer/index.html
+++ b/devtools/image_viewer/index.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-    <div id="plot-list"></div>
+    <div id="plot-list" style="overflow:auto; height:100px;"></div>
     <div id="plot-images"></div>
     <div id="plot-mock"></div>
 
