--- a/devtools/test_dashboard/index.html
+++ b/devtools/test_dashboard/index.html
@@ -21,6 +21,8 @@
 
     <!-- helper functions to manipulate the graph div -->
     <script>
+    var d3 = Plotly.d3;
+
     var Tabs = {
         getGraph: function() {
             return document.getElementById('embedded-graph').children[0];
@@ -34,10 +36,15 @@
             anchor.appendChild(graphDiv);
 
             return graphDiv;
+        },
+        plotMock: function(mockName) {
+            var mockURL = '../../test/image/mocks/' + mockName + '.json';
+
+            d3.json(mockURL, function(err, fig) {
+                Plotly.plot(Tabs.fresh(), fig.data, fig.layout);
+            });
         }
     };
-
-    var d3 = Plotly.d3;
     </script>
 
 </body>
