Change default plot id and add initial div to DOM

--- a/devtools/test_dashboard_v2/index.html
+++ b/devtools/test_dashboard_v2/index.html
@@ -67,7 +67,9 @@
   </header>
 
   <section id="mocks-list"></section>
-  <div id="plots"></div>
+  <div id="plots">
+    <div id="graph"></div>
+  </div>
   <div id="snapshot"></div>
 
   <script id="source" type="text/javascript" src="../../build/plotly.js"></script>
