Add autogeneration for mocks, fuzzy-search on two keys, and build step

--- a/devtools/test_dashboard/index.html
+++ b/devtools/test_dashboard/index.html
@@ -1,53 +1,25 @@
 <!DOCTYPE html>
+<html>
 <head>
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Droid+Sans|PT+Sans+Narrow|Gravitas+One|Droid+Sans+Mono|Droid+Serif|Raleway|Old+Standard+TT" />
+  <title>Plotly.js Devtools</title>
+  <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
+  <header>
+    <img src="http://images.plot.ly/logo/plotlyjs-logo@2x.png" onClick="Tabs.reload();">
+    <span id="reload-time"></span>
 
-    <div id="plot-list" style="overflow:auto; height:100px;"></div>
-    <div id="status-info" style="display:block; position:absolute; top:150px;"></div>
-    <div id="embedded-graph"></div>
-    <div id="embedded-image" style="display:block; position:absolute; top:800px;"></div>
+    <input id="mocks-search" type="text" placeholder="mocks search"></input>
+  </header>
 
-    <script type="text/javascript" src="../../dist/extras/mathjax/MathJax.js?config=TeX-AMS-MML_SVG"></script>
+  <section id="mocks-list"></section>
+  <div id="plots">
+    <div id="graph"></div>
+  </div>
+  <div id="snapshot"></div>
 
-    <!-- use dev plotly.js build -->
-    <script type="text/javascript" src="../../build/plotly.js" charset="utf-8"></script>
-
-    <!-- use local topojson files -->
-    <script>Plotly.setPlotConfig({ topojsonURL: '../../dist/topojson/' });</script>
-
-    <script type="text/javascript" src="../../build/test_dashboard-bundle.js"></script>
-
-    <!-- helper functions to manipulate the graph div -->
-    <script>
-    var d3 = Plotly.d3;
-
-    var Tabs = {
-        getGraph: function() {
-            return document.getElementById('embedded-graph').children[0];
-        },
-
-        fresh: function() {
-            var anchor = document.getElementById('embedded-graph'),
-                graphDiv = Tabs.getGraph();
-
-            if(graphDiv) anchor.removeChild(graphDiv);
-            graphDiv = document.createElement('div');
-            anchor.appendChild(graphDiv);
-
-            return graphDiv;
-        },
-
-        plotMock: function(mockName) {
-            var mockURL = '../../test/image/mocks/' + mockName + '.json';
-
-            d3.json(mockURL, function(err, fig) {
-                Plotly.plot(Tabs.fresh(), fig.data, fig.layout);
-            });
-        }
-    };
-    </script>
-
+  <script id="source" type="text/javascript" src="../../build/plotly.js"></script>
+  <script type="text/javascript" src="../../build/test_dashboard-bundle.js"></script>
 </body>
 </html>
+
